--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       run: msbuild /m /p:Platform=x64 /p:Configuration=Release al-khaser.sln
 
     - name: Zip x86 Binaries
-      run: 7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -mhe=on -p"yug69gG89T98HGUY8y" al-khaser_x86.7z al-khaser_x86.exe
+      run: 7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -mhe=on al-khaser_x86.7z al-khaser_x86.exe
 
     - name: Zip x64 Binaries
-      run: 7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -mhe=on -p"yug69gG89T98HGUY8y" al-khaser_x64.7z al-khaser_x64.exe
+      run: 7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -mhe=on al-khaser_x64.7z al-khaser_x64.exe
         
     - name: Upload x86 Binaries
       uses: actions/upload-artifact@v1
